build_log.txt
    Checking veltrix v0.1.0 (C:\Users\Admin\github\Veltrix)
warning: unused import: `crate::ecs::resources::Resources`
 --> src\renderer\particles.rs:4:5
  |
4 | use crate::ecs::resources::Resources;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `wgpu::util::DeviceExt`
 --> src\renderer\sprite_batcher.rs:6:5
  |
6 | use wgpu::util::DeviceExt;
  |     ^^^^^^^^^^^^^^^^^^^^^

warning: ambiguous glob re-exports
  --> src\lib.rs:53:13
   |
53 |     pub use crate::animation::*;
   |             ^^^^^^^^^^^^^^^^^^^ the name `clip` in the type namespace is first re-exported here
54 |     pub use crate::assets::*;
55 |     pub use crate::audio::*;
   |             --------------- but the name `clip` in the type namespace is also re-exported here
   |
   = note: `#[warn(ambiguous_glob_reexports)]` on by default

warning: ambiguous glob re-exports
  --> src\lib.rs:54:13
   |
54 |     pub use crate::assets::*;
   |             ^^^^^^^^^^^^^^^^ the name `loader` in the type namespace is first re-exported here
...
65 |     pub use crate::scene::*;
   |             --------------- but the name `loader` in the type namespace is also re-exported here

warning: ambiguous glob re-exports
  --> src\lib.rs:55:13
   |
55 |     pub use crate::audio::*;
   |             ^^^^^^^^^^^^^^^ the name `manager` in the type namespace is first re-exported here
...
70 |     pub use crate::window::*;
   |             ---------------- but the name `manager` in the type namespace is also re-exported here

warning: ambiguous glob re-exports
  --> src\lib.rs:58:13
   |
58 |     pub use crate::debug::*;
   |             ^^^^^^^^^^^^^^^ the name `renderer` in the type namespace is first re-exported here
...
68 |     pub use crate::tilemap::*;
   |             ----------------- but the name `renderer` in the type namespace is also re-exported here

warning: ambiguous glob re-exports
  --> src\lib.rs:59:13
   |
59 |     pub use crate::ecs::*;
   |             ^^^^^^^^^^^^^ the name `world` in the type namespace is first re-exported here
...
62 |     pub use crate::physics::*;
   |             ----------------- but the name `world` in the type namespace is also re-exported here

error[E0282]: type annotations needed for `std::vec::Vec<_>`
  --> src\renderer\particles.rs:12:13
   |
12 |         let mut to_update = Vec::new();
   |             ^^^^^^^^^^^^^   ---------- type must be known at this point
   |
help: consider giving `to_update` an explicit type, where the type for type parameter `T` is specified
   |
12 |         let mut to_update: std::vec::Vec<T> = Vec::new();
   |                          ++++++++++++++++++

warning: unused import: `slotmap::Key`
 --> src\ecs\storage.rs:5:5
  |
5 | use slotmap::Key;
  |     ^^^^^^^^^^^^

warning: variable does not need to be mutable
   --> src\core\engine.rs:206:33
    |
206 |                     if let Some(mut rd) = self.resources.get_mut::<crate::renderer::device::RenderDevice>() {
    |                                 ----^^
    |                                 |
    |                                 help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: variable does not need to be mutable
   --> src\core\engine.rs:222:37
    |
222 |                         if let Some(mut rd) = self.resources.get_mut::<crate::renderer::device::RenderDevice>() {
    |                                     ----^^
    |                                     |
    |                                     help: remove this `mut`

For more information about this error, try `rustc --explain E0282`.
warning: `veltrix` (lib) generated 10 warnings
error: could not compile `veltrix` (lib) due to 1 previous error; 10 warnings emitted
